# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.446 2007-08-16 12:41:31 sb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.2.3 (2007/??/??)
 - (2007/08/16) Fixed bug# 1492 - Fixed typo in Kernel/Language.pm.
 - (2007/08/10) Fixed bug# 2160 - 0 was ignored in database insert by package
    building.
 - (2007/08/10) Fixed bug# 2156 - External customer database is not working,
    it it's configured the following error message appears
    ("Got no MainObject in Kernel/System/DB.pm line 85").
 - (2007/08/10) Fixed bug# 2155 - Std-Attachments are not usable in agent
    ticket compose screen (no std attachments are shown in compose screen).
 - (2007/08/07) Fixed bug# 2118 - Fixed typo in german translation file (
    Kernel/Language/de.pm).
 - (2007/08/07) Fixed bug# 2117 - Fixed small typo in initial insert files.
 - (2007/08/06) Fixed bug# 1999 - Service and SLA can not changed on an
    existing ticket.
 - (2007/08/06) Fixed bug# 2142 - If a service or a sla of a ticket was changed,
    no ticket history entry was added.
 - (2007/08/06) Fixed bug# 2135 - scripts/DBUpdate-to-2.2.2.sql contains wrong
    SQL. Not the queue table needs to be changed, the ticket table would be the
    right one.
 - (2007/08/03) Fixed bug# 2134 - PDF print is creating damaged pdf files with
    PDF::API2 0.56 or smaller.
 - (2007/08/02) Fixed bug# 940 - After owners unlock ticket and a follow-up
    arrives the system, all agents which selected the queue of this ticket get
    and follow up message. In this follow up message the name was always the
    current owner and not the recipient of the email (which should be).
 - (2007/07/31) Fixed bug# 2001 - New escalation times and the responsible are
    not shown in any print views.

2.2.2 (2007/07/31)